Forgot to add stylesheet.

--- a/index.htm
+++ b/index.htm
@@ -1,1 +1,12 @@
-﻿
+<!doctype html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>This is a blank HTML</title>
+		<link href="_stylesheet.css" rel="stylesheet" type="text/css">
+	</head>
+	<body>
+		<h1>A Random Title</h1>
+		<p>I have nothing to type a this moment, but I have to type something her because I am learning how to use git, javascript, and other technologies.</p>
+	</body>
+</html>
