changed the stylesheet and index files

--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,24 @@
 		<link href="_stylesheet.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
-		<h1>A Random Title</h1>
-		<p>I have nothing to type a this moment, but I have to type something her because I am learning how to use git, javascript, and other technologies.</p>
+	
+	<div class="wrapper">
+			<article>
+				<h1>A Random Title</h1>
+				<p>I have nothing to type a this moment, but I have to type something her because I am learning how to use git, javascript, and other technologies.</p>
+			</article>
+			<article>
+				<h1>A Random Title</h1>
+				<p>I have nothing to type a this moment, but I have to type something her because I am learning how to use git, javascript, and other technologies.</p>
+			</article>
+			<article>
+				<h1>A Random Title</h1>
+				<p>I have nothing to type a this moment, but I have to type something her because I am learning how to use git, javascript, and other technologies.</p>
+			</article>
+			<article>
+				<h1>A Random Title</h1>
+				<p>I have nothing to type a this moment, but I have to type something her because I am learning how to use git, javascript, and other technologies.</p>
+			</article>
+	</div>
 	</body>
 </html>
